@@ -1,0 +1,130 @@
+/*
+ * ASAP.ppas - ActionScript version of ASAP
+ *
+ * Copyright (C) 2009  Piotr Fusik
+ *
+ * This file is part of ASAP (Another Slight Atari Player),
+ * see http://asap.sourceforge.net
+ *
+ * ASAP is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU General Public License as published
+ * by the Free Software Foundation; either version 2 of the License,
+ * or (at your option) any later version.
+ *
+ * ASAP is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty
+ * of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ * See the GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with ASAP; if not, write to the Free Software Foundation, Inc.,
+ * 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
+ */
+
+package
+{
+	import flash.utils.ByteArray;
+
+	public class ASAP
+	{
+		#define JAVASCRIPT
+		#include "acpu.c"
+		#include "apokeysnd.c"
+		#include "asap.c"
+		#undef const
+		#undef int
+
+		private var cycle : int;
+		private var cpu_pc : int;
+		private var cpu_a : int;
+		private var cpu_x : int;
+		private var cpu_y : int;
+		private var cpu_s : int;
+		private var cpu_nz : int;
+		private var cpu_c : int;
+		private var cpu_vdi : int;
+		private var scanline_number : int;
+		private var nearest_event_cycle : int;
+		private var next_scanline_cycle : int;
+		private var timer1_cycle : int;
+		private var timer2_cycle : int;
+		private var timer4_cycle : int;
+		private var irqst : int;
+		private var extra_pokey_mask : int;
+		private var consol : int;
+		private var covox = new Array(4);
+		private var base_pokey = { delta_buffer : new Array(888) };
+		private var extra_pokey = { delta_buffer : new Array(888) };
+		private var sample_offset : int;
+		private var sample_index : int;
+		private var samples : int;
+		private var iir_acc_left : int;
+		private var iir_acc_right : int;
+		private var module_info = { durations : new Array(ASAP_SONGS_MAX), loops : new Array(ASAP_SONGS_MAX) };
+		private var tmc_per_frame : int;
+		private var tmc_per_frame_counter : int;
+		private var current_song : int;
+		private var current_duration : int;
+		private var blocks_played : int;
+		private var silence_cycles : int;
+		private var silence_cycles_counter : int;
+		private var poly9_lookup = new ByteArray();
+		private var poly17_lookup = new ByteArray();
+		private var memory = new ByteArray();
+
+		public static const VERSION : String = "2.0.0";
+		public static const WAV_HEADER_BYTES : int = 44;
+
+		public static const ASAP_SampleFormat = {
+			U8 : 8,
+			S16LE : 16,
+			S16BE : -16
+		};
+
+		public static function ASAP_ParseDuration(s : String) : int
+		{
+			var i = s.indexOf(":");
+			var r = 0;
+			if (i >= 0) {
+				r = parseInt(s.substring(0, i)) * 60000;
+				s = s.substring(i + 1, s.length);
+			}
+			i = s.indexOf(" ");
+			if (i >= 0)
+				s = s.substring(0, i);
+			r += Math.floor(parseFloat(s) * 1000);
+			return r;
+		}
+
+		public function load(filename : String, module : ByteArray)
+		{
+			if (!ASAP_Load(this, filename, module, module.length))
+				throw "ASAP load error";
+		}
+
+		public function get moduleInfo()
+		{
+			return this.module_info;
+		}
+
+		public function playSong(song : int, duration : int) : void
+		{
+			ASAP_PlaySong(this, song, duration);
+		}
+
+		public function mutePokeyChannels(mask : int) : void
+		{
+			ASAP_MutePokeyChannels(this, mask);
+		}
+
+		public function getWavHeader(buffer : ByteArray, format : int) : void
+		{
+			ASAP_GetWavHeader(this, buffer, format);
+		}
+
+		public function generate(buffer : ByteArray, buffer_len : int, format : int) : int
+		{
+			return ASAP_Generate(this, buffer, buffer_len, format);
+		}
+	}
+}
