@@ -1,3 +1,8 @@
+2009-09-29  Piotr Fusik  <fox@scene.pl>
+* flash/ASAP.ppas, flash/ASAPPlayer.as, flash/Makefile, anylang.h, apokeysnd.c,
+  asap.c, win32/Makefile: Flash version!
+
+
 2009-09-28  Piotr Fusik  <fox@scene.pl>
 * win32/Makefile: binary distributions renamed from *-win32.* to *-windows.*
 
